; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/kernel32/wine/extr_comm.c_COMM_ParseByteSize.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/kernel32/wine/extr_comm.c_COMM_ParseByteSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @COMM_ParseByteSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @COMM_ParseByteSize(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32* @COMM_ParseNumber(i32* %7, i32* %6)
  store i32* %8, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %22

11:                                               ; preds = %2
  %12 = load i32, i32* %6, align 4
  %13 = icmp sge i32 %12, 5
  br i1 %13, label %14, label %21

14:                                               ; preds = %11
  %15 = load i32, i32* %6, align 4
  %16 = icmp sle i32 %15, 8
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load i32, i32* %6, align 4
  %19 = load i32*, i32** %5, align 8
  store i32 %18, i32* %19, align 4
  %20 = load i32*, i32** %4, align 8
  store i32* %20, i32** %3, align 8
  br label %22

21:                                               ; preds = %14, %11
  store i32* null, i32** %3, align 8
  br label %22

22:                                               ; preds = %21, %17, %10
  %23 = load i32*, i32** %3, align 8
  ret i32* %23
}

declare dso_local i32* @COMM_ParseNumber(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
